# tablespec

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.beads/: metadata.json
.github/workflows/: pre-commit.yml  release.yml  test.yml
.helix/: issues.jsonl
docs/: development.md  index.md
docs/api/: cli.md  generators.md  gx.md  models.md  type_mappings.md
docs/guide/: change-management.md  cli.md  domain-inference.md  excel.md  great-expectations.md  llm-prompts.md  profiling.md  sample-data.md  schema-generation.md  split-format.md  umf-format.md
docs/helix/00-discover/: README.md  product-vision.md
docs/helix/01-frame/: README.md  prd.md  principles.md
docs/helix/02-design/: README.md  architecture.md
docs/helix/03-test/: README.md  test-plan.md
docs/helix/04-build/: README.md  implementation-plan-v2.md  implementation-plan.md
docs/helix/05-deploy/: README.md  deployment-checklist.md
docs/helix/06-iterate/: README.md
examples/: Dockerfile.demo  SCREENCAST_SCRIPT.md  demo.py  demo.tape  narrate.sh  providers.yaml  scene.py  schema.yaml  screencast.sh  tablespec-demo.cast
scripts/: setup_spark.py
src/tablespec/: __init__.py  casting_utils.py  changelog_diff_parser.py  changelog_formatter.py  changelog_generator.py  cli.py  compatibility.py  completeness_validator.py  date_formats.py  dependency_resolver.py  domain_types.yaml  excel_converter.py  excel_import_git.py  expectation_migration.py  format_utils.py  gx_baseline.py  gx_constraint_extractor.py  gx_schema_validator.py  gx_wrapper.py  merge.py  naming.py  naming_validator.py  output_formatting.py  relationship_validator.py  spark_factory.py  survivorship_display.py  sync_baseline.py  tui.py  type_lattice.py  type_mappings.py  umf_change_applier.py  umf_diff.py  umf_loader.py  umf_validator.py  validator.py
src/tablespec/authoring/: __init__.py  apply_response.py  mutations.py  preview.py
src/tablespec/formatting/: __init__.py  constants.py  yaml_formatter.py
src/tablespec/inference/: __init__.py  domain_types.py
src/tablespec/models/: __init__.py  changelog.py  pipeline.py  quality.py  umf.py
src/tablespec/profiling/: __init__.py  deequ_mapper.py  spark_mapper.py  types.py
src/tablespec/prompts/: __init__.py  column_validation.py  documentation.py  expectation_guide.py  filename_pattern.py  relationship.py  survivorship.py  utils.py  validation.py  validation_per_column.py
tests/: __init__.py  builders.py  conftest.py  strategies.py  test_golden.py
tests/fixtures/: complete_gx_suite.json  gx_validation_report.json
tests/integration/: README.md  __init__.py  test_demo.py  test_umf_workflow.py
tests/unit/: __init__.py  test_apply_response.py  test_baseline_fixes.py  test_blocking_and_reporting.py  test_builders.py  test_casting_utils.py  test_changelog.py  test_changelog_models.py  test_classify_validation.py  test_cli.py  test_cli_apply_response.py  test_cli_column_commands.py  test_cli_domains_set.py  test_cli_validation_commands.py  test_column_value_generator.py  test_compatibility.py  test_completeness_validator.py  test_conditional_nullable.py  test_constraint_handlers.py  test_date_formats.py  test_date_order_expectation.py  test_date_processing.py  test_dependency_resolver.py  test_domain_improvements.py  test_domain_pack_extensibility.py  test_domain_type_compatibility.py  test_domain_type_expectation.py  test_domain_type_inference.py  test_excel_converter.py  test_expectation_consistency.py  test_expectation_migration.py  test_expectation_suite.py  test_filename_generator.py  test_filename_pattern.py  test_foreign_key_pool_uniqueness.py  test_foreign_keys.py  test_format_utils.py  test_gx_baseline.py  test_gx_constraint_extractor.py  test_gx_duckdb_spike.py  (+44 more)
(+100 files in other folders)
